HAS LPAQ - additional value for submitted appeals table

--- a/app/views/manage/appeals/v5/index.html
+++ b/app/views/manage/appeals/v5/index.html
@@ -40,7 +40,7 @@
           Questionnaire complete
         </h3>
         <p class="govuk-body">
-          Questionnaire for appeal 1345264 has been <a href="?questionnaire-banner=&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
+          Questionnaire for appeal 1345264 has been <a href="?questionnaire-banner=questionnaire=complete&submitted-appeals=yes#submitted-appeals" class="govuk-link"><span class="govuk-visually-hidden">View </span>submitted<span class="govuk-visually-hidden"> appeals</span></a>.
         </p>
       {% endset %}
       {{ govukNotificationBanner({
