First FO part of withdrawing an appeal, we still need Notify content and BO view

--- a/app/views/_layouts/layout-email.html
+++ b/app/views/_layouts/layout-email.html
@@ -43,6 +43,6 @@
 	<p class="govuk-body">
 		The Planning Inspectorate
 		<br>
-		<a href="#0">enquiries@planninginspectorate.gov.uk</a>
+		enquiries@planninginspectorate.gov.uk
 	</p>
 {% endblock %}
