--- a/app/views/manage/questionnaire-has/index.html
+++ b/app/views/manage/questionnaire-has/index.html
@@ -40,7 +40,7 @@
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        Change to neighbours addresses following research
+        Change to visiting neighbours question following research
       </li>
     </ul>
 
