--- a/app/views/manage/questionnaire-has/v4/site-access/neighbours-address.html
+++ b/app/views/manage/questionnaire-has/v4/site-access/neighbours-address.html
@@ -1,6 +1,8 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Tell us the address of the affected neighbour' %}
+{% set title = 'Tell us the address of the neighbour’s land or property' %}
+
+<!-- (1417.1.1) 4.b.i. Full address of the neighbour’s land or property. * -->
 
 {% block questions %}
 
