Withdraw an appeal

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -40,6 +40,9 @@
         <li>
           Service offline (needs review)
         </li>
+        <li>
+          <a href="appeal/withdraw-appeal/">Withdrawing an appeal</a>
+        </li>
 
       </ul>
 
