HAS LPAQ content updares for neighbours

--- a/app/views/manage/questionnaire-has/v4/task-list__site-access.html
+++ b/app/views/manage/questionnaire-has/v4/task-list__site-access.html
@@ -48,7 +48,7 @@
       },
       {
         key: {
-          html: 'Will the reasons for your decision require the Inspector to enter a neighbour’s land or property?'
+          html: 'Inspector visit to neighbour'
         },
         value: {
           html: 'Yes' if data['neighbours-land'] == 'Yes' else 'No'
