--- a/app/views/manage/questionnaire-has/v4/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire-has/v4/site-access/neighbours-land.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Will the reasons for your decision require the Inspector to enter a neighbour’s land or property?' %}
+{% set title = 'Will the inspector need to enter a neighbour’s land or property?' %}
 
 <!-- Will the reasons for refusal / grounds of appeal require the Inspector to access a neighbour’s land? -->
 
