--- a/app/views/manage/questionnaire-has/v4/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v4/site-access/neighbours.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Affected neighbour added' %}
+{% set title = 'Neighbour added' %}
 
 {% set prototypeLinks = [
   {
@@ -80,7 +80,7 @@
       name: 'add-neighbours',
       fieldset: {
         legend: {
-          html: 'Do you want to add another affected neighbour?',
+          html: 'Do you want to add another neighbour to be visited?',
           classes: 'govuk-fieldset__legend--m',
           isPageHeading: false
         }
