--- a/app/views/manage/questionnaire-has/index.html
+++ b/app/views/manage/questionnaire-has/index.html
@@ -21,12 +21,13 @@
       {{ title }}
     </h1>
 
-    {% set version = "4" %}
+    {% set version = "5" %}
+
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
@@ -40,7 +41,7 @@
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        Change to visiting neighbours question following research
+        Content updates following user research
       </li>
     </ul>
 
@@ -49,6 +50,30 @@
       href: 'v'+version+'/task-list',
       isStartButton: true
     }) }}
+
+    {% set v4HTML %}
+
+      <!-- <p>
+        Researched July 2023<br>
+        <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
+          Confluence user research notes
+        </a>
+      </p> -->
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          Change to visiting neighbours question following research
+        </li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/task-list',
+        isStartButton: true
+      }) }}
+
+    {% endset -%}
 
     {% set v3HTML %}
 
@@ -126,6 +151,14 @@
       classes: 'govuk-!-margin-top-5',
       items: [
 
+        {
+          heading: {
+            html: 'Version 4 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v4HTML
+          }
+        },
         {
           heading: {
             html: 'Version 3 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
