--- a/app/views/manage/questionnaire-has/v6/task-list.html
+++ b/app/views/manage/questionnaire-has/v6/task-list.html
@@ -11,7 +11,7 @@
 {% block backLink %}
   {{ govukBackLink({
     html: 'Back to your planning appeals',
-    href: '/manage/appeals/v5?action='
+    href: 'https://appeals-prototype.herokuapp.com/manage/appeals/v5?action='
   }) }}
 {% endblock %}
 
