Quick fix to HAS version page

--- a/app/views/manage/questionnaire-has/index.html
+++ b/app/views/manage/questionnaire-has/index.html
@@ -51,17 +51,9 @@
       isStartButton: true
     }) }}
 
-    {% set 5HTML %}
+    {% set v5HTML %}
 
     {% set version = "5" %}
-
-    <h2 class="govuk-heading-m">
-      Version {{version}}
-      {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Ready for research'
-      }) }}
-    </h2>
 
     <!-- <p>
       Researched July 2023<br>
