--- a/app/views/manage/questionnaire/v13/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire/v13/appeal-process/extra-conditions.html
@@ -3,6 +3,11 @@
 {% set title = 'Extra conditions' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Appeal process
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
