--- a/app/views/manage/questionnaire/v13/appeal-process/other-appeals.html
+++ b/app/views/manage/questionnaire/v13/appeal-process/other-appeals.html
@@ -3,6 +3,11 @@
 {% set title = 'Are there any other appeals next to or close to the site still being considered?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Appeal process
+  </span>
+
   {% set appealRefs %}
     {{ govukInput({
       id: 'appeal-refs',
