--- a/app/views/manage/questionnaire/v13/appeal-process/statement-of-case.html
+++ b/app/views/manage/questionnaire/v13/appeal-process/statement-of-case.html
@@ -3,6 +3,11 @@
 {% set title = 'Statement of case' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Appeal process
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
