--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-building-details.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-building-details.html
@@ -3,6 +3,11 @@
 {% set title = 'Affected Listed Building Number' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+  
   <div class="govuk-form-group">
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--l" for="listedplanning">
