--- a/app/views/manage/questionnaire/v13/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire/v13/constraints/conservation-upload.html
@@ -3,6 +3,11 @@
 {% set title = 'Upload the conservation area map and guidance' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
