--- a/app/views/manage/questionnaire/v13/constraints/designated-sites.html
+++ b/app/views/manage/questionnaire/v13/constraints/designated-sites.html
@@ -3,6 +3,11 @@
 {% set title = 'Is the development in, near or likely to affect any designated sites?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   {% set other %}
     {{ govukInput({
       id: 'other-desigations',
