--- a/app/views/manage/questionnaire/v13/constraints/green-belt.html
+++ b/app/views/manage/questionnaire/v13/constraints/green-belt.html
@@ -3,6 +3,11 @@
 {% set title = 'Is the appeal site in a green belt?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   {{ govukRadios({
     idPrefix: 'green-belt',
     name: 'green-belt',
