--- a/app/views/manage/questionnaire/v13/constraints/listed-building-details.html
+++ b/app/views/manage/questionnaire/v13/constraints/listed-building-details.html
@@ -5,6 +5,9 @@
 {% block questions %}
 
   <div class="govuk-form-group">
+    <span class="govuk-caption-l">
+      Constraints, designations and other issues
+    </span>
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--l" for="listedplanning">
         {{ title }}
