--- a/app/views/manage/questionnaire/v13/constraints/listed-buildings.html
+++ b/app/views/manage/questionnaire/v13/constraints/listed-buildings.html
@@ -15,6 +15,10 @@
 
 {% block questions %}
 
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   <section class="govuk-!-margin-bottom-6">
 
       {% if data['extrabuildingsaffected'] %}
