--- a/app/views/manage/questionnaire/v13/constraints/right-of-way-check.html
+++ b/app/views/manage/questionnaire/v13/constraints/right-of-way-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Would a public right of way need to be removed or diverted?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   {{ govukRadios({
     idPrefix: 'right-of-way-check',
     name: 'right-of-way-check',
