--- a/app/views/manage/questionnaire/v13/constraints/tree-order-check.html
+++ b/app/views/manage/questionnaire/v13/constraints/tree-order-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Does a Tree Preservation Order (TPO) apply to any part of the appeal site?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+  
   {{ govukRadios({
     idPrefix: 'tree-order-check',
     name: 'tree-order-check',
