--- a/app/views/manage/questionnaire/v13/consultation/other-parties-check.html
+++ b/app/views/manage/questionnaire/v13/consultation/other-parties-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Did you receive representations from any other parties?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Consultation responses and representations
+  </span>
+
   {{ govukRadios({
     idPrefix: 'other-parties-check',
     name: 'other-parties-check',
