--- a/app/views/manage/questionnaire/v13/env-impact/site-notice-upload.html
+++ b/app/views/manage/questionnaire/v13/env-impact/site-notice-upload.html
@@ -3,6 +3,11 @@
 {% set title = 'Upload the site notice and advertisement for the environmental impact assessment' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Environmental impact assessment
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
