--- a/app/views/manage/questionnaire/v13/po-report/community-infrastructure-adopted.html
+++ b/app/views/manage/questionnaire/v13/po-report/community-infrastructure-adopted.html
@@ -3,6 +3,11 @@
 {% set title = 'Is the community infrastructure levy formally adopted?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Planning officer’s report and relevant policies
+  </span>
+
   {{ govukRadios({
     idPrefix: 'community-infrastructure-adopted',
     name: 'community-infrastructure-adopted',
