--- a/app/views/manage/questionnaire/v13/po-report/community-infrastructure-check.html
+++ b/app/views/manage/questionnaire/v13/po-report/community-infrastructure-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Do you have a community infrastructure levy?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Planning officer’s report and relevant policies
+  </span>
+
   {{ govukRadios({
     idPrefix: 'community-infrastructure-check',
     name: 'community-infrastructure-check',
