--- a/app/views/manage/questionnaire/v13/po-report/community-infrastructure-date.html
+++ b/app/views/manage/questionnaire/v13/po-report/community-infrastructure-date.html
@@ -4,6 +4,9 @@
 
 {% block questions %}
 
+  <span class="govuk-caption-l">
+    Planning officer’s report and relevant policies
+  </span>
 
   {% if data['community-infrastructure-adopted'] == 'Yes' %}
 
