--- a/app/views/manage/questionnaire/v13/po-report/emerging-plan-check.html
+++ b/app/views/manage/questionnaire/v13/po-report/emerging-plan-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Do you have an emerging plan that&rsquo;s relevant to this appeal?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Planning officer’s report and relevant policies
+  </span>
+
   {% set hintText %}
     <p class="govuk-!-margin-bottom-2">Tell us if you have a:</p>
     <ul class="govuk-list govuk-list--bullet govuk-hint">
