--- a/app/views/manage/questionnaire/v13/po-report/supplementary-check.html
+++ b/app/views/manage/questionnaire/v13/po-report/supplementary-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Did any supplementary planning documents inform the outcome of the application?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Planning officer’s report and relevant policies
+  </span>
+
   {{ govukRadios({
     idPrefix: 'supplementary-check',
     name: 'supplementary-check',
