--- a/app/views/manage/questionnaire/v13/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire/v13/site-access/health-and-safety.html
@@ -4,6 +4,10 @@
 
 {% block questions %}
 
+  <span class="govuk-caption-l">
+    Site access
+  </span>
+
   {% set textareaHTML %}
     {{ govukTextarea({
       name: 'health-and-safety__details',
