--- a/app/views/manage/questionnaire/v13/site-access/site-visibility.html
+++ b/app/views/manage/questionnaire/v13/site-access/site-visibility.html
@@ -3,6 +3,11 @@
 {% set title = 'Can the inspector see the subject of the appeal from a public road or footpath?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Site access
+  </span>
+
   {{ govukRadios({
     idPrefix: 'site-visibility',
     name: 'site-visibility',
