--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-building-check.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-building-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Does the proposed development affect the setting of listed buildings?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   {{ govukRadios({
     idPrefix: 'affected-listed-building-check',
     name: 'affected-listed-building-check',
