--- a/app/views/manage/questionnaire/v13/constraints/outstanding-natural-beauty.html
+++ b/app/views/manage/questionnaire/v13/constraints/outstanding-natural-beauty.html
@@ -3,6 +3,11 @@
 {% set title = 'Is the appeal site in an area of outstanding natural beauty?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   {{ govukRadios({
     idPrefix: 'outstanding-natural-beauty',
     name: 'outstanding-natural-beauty',
