--- a/app/views/manage/questionnaire/v13/constraints/protected-species.html
+++ b/app/views/manage/questionnaire/v13/constraints/protected-species.html
@@ -3,6 +3,11 @@
 {% set title = 'Would the development affect a protected species?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+
   {{ govukRadios({
     idPrefix: 'protected-species',
     name: 'protected-species',
