--- a/app/views/manage/questionnaire/v13/constraints/scheduled-monument.html
+++ b/app/views/manage/questionnaire/v13/constraints/scheduled-monument.html
@@ -3,6 +3,11 @@
 {% set title = 'Would the development affect a scheduled monument?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+  
   {{ govukRadios({
     idPrefix: 'scheduled-monument',
     name: 'scheduled-monument',
