--- a/app/views/manage/questionnaire/v13/constraints/traveller.html
+++ b/app/views/manage/questionnaire/v13/constraints/traveller.html
@@ -3,6 +3,11 @@
 {% set title = 'Does the development relate to anyone claiming to be a Gypsy or Traveller?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Constraints, designations and other issues
+  </span>
+  
   {{ govukRadios({
     idPrefix: 'traveller',
     name: 'traveller',
