--- a/app/views/manage/questionnaire/v13/consultation/other-parties-upload.html
+++ b/app/views/manage/questionnaire/v13/consultation/other-parties-upload.html
@@ -3,6 +3,11 @@
 {% set title = 'Upload the representations from other parties' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Consultation responses and representations
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
