--- a/app/views/manage/questionnaire/v13/env-impact/applicant-env-statement-check.html
+++ b/app/views/manage/questionnaire/v13/env-impact/applicant-env-statement-check.html
@@ -3,6 +3,11 @@
 {% set title = 'Did the applicant submit an environmental statement?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Environmental impact assessment
+  </span>
+
   {{ govukRadios({
     idPrefix: 'applicant-env-statement-check',
     name: 'applicant-env-statement-check',
