--- a/app/views/manage/questionnaire/v13/env-impact/development-desc.html
+++ b/app/views/manage/questionnaire/v13/env-impact/development-desc.html
@@ -3,6 +3,11 @@
 {% set title = 'Description of development' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Environmental impact assessment
+  </span>
+
   {{ govukRadios({
     idPrefix: 'development-desc',
     name: 'development-desc',
