--- a/app/views/manage/questionnaire/v13/notified/site-notice-upload.html
+++ b/app/views/manage/questionnaire/v13/notified/site-notice-upload.html
@@ -3,6 +3,11 @@
 {% set title = 'Upload your site notice' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Notifying people about the application
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
