--- a/app/views/manage/questionnaire/v13/po-report/policies-upload.html
+++ b/app/views/manage/questionnaire/v13/po-report/policies-upload.html
@@ -3,6 +3,11 @@
 {% set title = 'Upload relevant policies from your statutory development plan' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Planning officer’s report and relevant policies
+  </span>
+
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
