--- a/app/views/manage/questionnaire/v13/site-access/site-entry.html
+++ b/app/views/manage/questionnaire/v13/site-access/site-entry.html
@@ -3,6 +3,11 @@
 {% set title = 'Will the inspector need to enter the appeal site?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Site access
+  </span>
+
   {% set detailsHTML %}
     {{ govukTextarea({
       name: 'site-entry__details',
